--- a/index.html
+++ b/index.html
@@ -339,7 +339,22 @@ ZH-TW;mso-bidi-language:AR-SA">&#26597;&#35426;&#12290;</span></p>
 		  <strong>Sep&nbsp;&nbsp; 12, 19, 26<br />
 		  Oct&nbsp;&nbsp;&nbsp; 3, 10, 17, 24, 31<br />
 		  Nov&nbsp;&nbsp;&nbsp; 7, 14, 21<br />
-		  Dec&nbsp;&nbsp;&nbsp; 5, 12, 19, <br />
+		  Dec&nbsp;&nbsp;&nbsp; 5, 12, 19</strong></p>
+		  <p class="style24">
+		  <strong>12/19/2020 is the last class in the year.</strong></p>
+<p class="style24">
+<strong><span class="auto-style2">Calendar of 2020:</span></strong></p>
+		  <p class="style24">
+		  <strong>Jan&nbsp;&nbsp; 9, 16, 23, 30<br />
+		  Feb&nbsp;&nbsp; 6, 13, 20, 27<br />
+		  Mar&nbsp;&nbsp;&nbsp; 6, 13, 20<br />
+		  Apr&nbsp;&nbsp;&nbsp; 10, 17, 24 <br />
+		  May&nbsp;&nbsp; 1, 8, 15, 22</strong></p>
+		  <p class="style24">
+		  <strong>There is no classs for 3/27/2021 and 4/3/2021 for spring 
+		  break.</strong></p>
+		  <p class="style24">
+		  <strong>
 		  <br />
 <span class="auto-style2">Time&nbsp; Saturday 10am - 12 noon</span><br />
 		  </strong></p>
