--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@ ZH-TW;mso-bidi-language:AR-SA">&#26597;&#35426;&#12290;</span></p>
 		  Apr&nbsp;&nbsp;&nbsp; 10, 17, 24 <br />
 		  May&nbsp;&nbsp; 1, 8, 15, 22</strong></p>
 		  <p class="style24">
-		  <strong>There is no classs for 3/27/2021 and 4/3/2021 for spring 
+		  <strong>There is no classes for 3/27/2021 and 4/3/2021 for spring 
 		  break.</strong></p>
 		  <p class="style24">
 		  <strong>
