--- a/contact.html
+++ b/contact.html
@@ -127,7 +127,8 @@ color:#5A6370;mso-ansi-language:EN-US;mso-fareast-language:ZH-TW;mso-bidi-langua
 AR-SA">&#35531;&#29992;<a target="_new" href="docs/Friends%20of%20CAPSA%20Form%202015.pdf">&#27138;&#25424;&#34920;&#26684;(<span lang="ZH-TW">&#35531;&#25353;&#27492;&#27396;</span>)</a></span><span lang="ZH-TW" style="font-size:12.0pt;
 font-family:&quot;TSC UKai M TT&quot;;">&#20197;&#37109;&#23492;&#26041;&#24335;&#25424;&#36104;&#25110;&#25353;&#20197;&#19979;&#32178;&#22336;&#19978;&#32178;&#25424;&#36104;&#12290;</span></p>
 		<p class="style2"> 
-      	<a href="https://www.networkforgood.org/donation/MakeDonation.aspx?ORGID2=52-1785909"><img src="pics/donatenowlogo1.gif" alt="Donate Now Through Network for Good" /></a></p>
+      	<a href="https://www.paypal.com/paypalme/capsamc" target="_blank">
+		https://www.paypal.com/paypalme/capsamc</a></p>
 		<p class="style2"> 
       	Your generosity is highly appreciated!</p> 
       	</div>
