--- a/tutoring.html
+++ b/tutoring.html
@@ -94,20 +94,17 @@
             <h1>Tutoring Staff</h1>
           </div>
           <div class="sbicontent">
-            <h2>Director</h2>
+            <h2>President</h2>
             <p>&nbsp;&nbsp;&nbsp;Zhendong Chen
 				
 				      <font face="Arial">			
       	  <span style="font-family: TSC UKai M TT">
 			&#38515;&#38663;&#26481;</span></font></p>
-            <h2>Deputy Director of K-12</h2>
-<p>&nbsp;&nbsp;&nbsp;<span style="font-size:11.0pt;line-height:115%;
-font-family:&quot;Calibri&quot;,&quot;sans-serif&quot;;mso-ascii-theme-font:minor-latin;mso-fareast-font-family:
-Calibri;mso-fareast-theme-font:minor-latin;mso-hansi-theme-font:minor-latin;
-mso-bidi-font-family:&quot;Times New Roman&quot;;mso-bidi-theme-font:minor-bidi;
-mso-ansi-language:EN-US;mso-fareast-language:EN-US;mso-bidi-language:AR-SA">Shirley 
-Craun&nbsp;</span><span style="line-height: 115%; mso-bidi-font-family: &quot;MS Gothic&quot;; mso-ansi-language: EN-US; mso-fareast-language: EN-US; mso-bidi-language: AR-SA" class="style6">&#21129;&#23389;&#34174;</span></p>
-            <h2>Deputy Director of Registration</h2>
+            <h2>Director of K-12</h2>
+<p>&nbsp;&nbsp;&nbsp;Charisa Lin</p>
+            <h2>Director of Operation</h2>
+			  <h2>&nbsp;&nbsp;&nbsp;&nbsp; Karen&nbsp; Lau</h2>
+			  <h2>Director of Finance</h2>
 <p>&nbsp;&nbsp;&nbsp;<span class="style12">Xiaoning He&nbsp; &#20309;&#23567;&#23527;</span></p>
           </div>
         </div>
